[project]
name = "chatpdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "google-generativeai>=0.8.6",
    "inngest>=0.5.18",
    "llama-index-core>=0.14.20",
    "llama-index-readers-file>=0.6.0",
    "nest-asyncio>=1.6.0",
    "pdf2image>=1.17.0",
    "pypdf>=4.0.0",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "requests>=2.31.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]
